--- a/wiki/fr/TechDraw_DecorateLine.html
+++ b/wiki/fr/TechDraw_DecorateLine.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DecorateLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DecorateLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Liniendarstellung&Auml;ndern (60% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Liniendarstellung&Auml;ndern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_DecorateLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DecorateLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Aspetto delle linee (60% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Zmie&#324; wygl&#261;d linii (90% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Zmie&#324; wygl&#261;d linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1048;&#1079;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1074;&#1085;&#1077;&#1096;&#1085;&#1080;&#1081; &#1074;&#1080;&#1076; &#1083;&#1080;&#1085;&#1080;&#1081;" (30% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#49440;&#44984;&#48120;&#44592; (60% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/fr">Ligne cosm&eacute;tique par 2 points</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -108,7 +106,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -131,35 +129,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151849
+Cached time: 20260119185203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.161 seconds
-Preprocessor visited node count: 390/1000000
-Post&#8208;expand include size: 27690/2097152 bytes
-Template argument size: 9870/2097152 bytes
+CPU time usage: 0.101 seconds
+Real time usage: 0.186 seconds
+Preprocessor visited node count: 389/1000000
+Post&#8208;expand include size: 27778/2097152 bytes
+Template argument size: 9924/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1627/5000000 bytes
+Unstrip post&#8208;expand size: 1639/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.288      1 -total
- 34.73%    8.783      1 Template:TechDraw_Tools_navi/fr
- 25.93%    6.558      2 Template:Navigation_menu_2
- 18.99%    4.802      1 Template:Userdocnavi/fr
- 10.55%    2.667      1 Template:GuiCommand/fr
- 10.14%    2.565      1 Template:Version/fr
- 10.12%    2.560      2 Template:Docnav/fr
-  4.84%    1.223      2 Template:Caption
-  3.66%    0.927      6 Template:Button
-  3.01%    0.762      1 Template:MenuCommand
+100.00%   41.962      1 -total
+ 32.51%   13.642      1 Template:TechDraw_Tools_navi/fr
+ 17.36%    7.285      2 Template:Navigation_menu_2
+ 15.78%    6.622      1 Template:Userdocnavi/fr
+ 11.25%    4.719      1 Template:GuiCommand/fr
+  8.25%    3.463      2 Template:Caption
+  7.52%    3.157      2 Template:Docnav/fr
+  7.42%    3.113      1 Template:Version/fr
+  6.69%    2.808      1 Template:MenuCommand
+  6.63%    2.782      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260111151849 and revision id 1734509. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260119185203 and revision id 1741098. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
