--- a/wiki/fr/TechDraw_DecorateLine.html
+++ b/wiki/fr/TechDraw_DecorateLine.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DecorateLine/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DecorateLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Liniendarstellung&Auml;ndern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_DecorateLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DecorateLine (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Aspetto delle linee (60% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Zmie&#324; wygl&#261;d linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1048;&#1079;&#1084;&#1077;&#1085;&#1080;&#1090;&#1100; &#1074;&#1085;&#1077;&#1096;&#1085;&#1080;&#1081; &#1074;&#1080;&#1076; &#1083;&#1080;&#1085;&#1080;&#1081;" (30% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -63,21 +63,19 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une vue ou une ou plusieurs lignes dans une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Changer l'apparence des lignes</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des lignes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Changer l'apparence des lignes</b> du menu.</li>
 <li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: double- cliquez sur une ligne &agrave; l'int&eacute;rieur d'une vue.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre.</li>
-<li>Si vous avez s&eacute;lectionn&eacute; des ar&ecirc;tes, vous pouvez changer leur <b>couleur</b>, <b>style</b>, <b>&eacute;paisseur</b> et/ou <b>visibilit&eacute;</b> dans la section <b>Apparence des lignes</b>.</li>
-<li>Pour rendre les bords invisibles de la vue &agrave; nouveau visibles de fa&ccedil;on permanente&nbsp;: appuyez &eacute;ventuellement sur un ou plusieurs des boutons de la section <b>Restaurer les lignes cach&eacute;es</b>&nbsp;:
+<li>Si vous avez s&eacute;lectionn&eacute; des ar&ecirc;tes, vous pouvez changer leurs propri&eacute;t&eacute;s <b>style</b>, <b>couleur</b>, <b>&eacute;paisseur</b> et/ou <b>visibilit&eacute;</b> dans la section <b>Apparence des lignes</b>.</li>
+<li>Pour rendre les ar&ecirc;tes invisibles de la vue &agrave; nouveau visibles de fa&ccedil;on permanente&nbsp;: vous pouvez appuyer sur un ou plusieurs des boutons de la section <b>Restaurer les lignes cach&eacute;es</b>&nbsp;:
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Tout</span></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">G&eacute;om&eacute;trie</span></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Cosm&eacute;tique</span></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Ligne centrale</span></li></ul></li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -125,35 +123,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119185250
+Cached time: 20260119185640
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.170 seconds
-Preprocessor visited node count: 387/1000000
+CPU time usage: 0.081 seconds
+Real time usage: 0.130 seconds
+Preprocessor visited node count: 386/1000000
 Post&#8208;expand include size: 27838/2097152 bytes
 Template argument size: 9964/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1639/5000000 bytes
+Unstrip post&#8208;expand size: 1643/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.732      1 -total
- 29.09%    8.358      1 Template:TechDraw_Tools_navi/fr
- 23.90%    6.867      2 Template:Navigation_menu_2
- 18.54%    5.328      1 Template:GuiCommand/fr
- 16.37%    4.702      1 Template:Userdocnavi/fr
- 11.66%    3.350      2 Template:Docnav/fr
-  7.02%    2.018      2 Template:Caption
-  6.97%    2.004      1 Template:Version/fr
-  4.08%    1.171      6 Template:Button
-  3.40%    0.977      1 Template:MenuCommand
+100.00%   29.660      1 -total
+ 33.11%    9.819      1 Template:TechDraw_Tools_navi/fr
+ 27.35%    8.113      2 Template:Navigation_menu_2
+ 19.94%    5.915      1 Template:Userdocnavi/fr
+ 11.27%    3.341      2 Template:Docnav/fr
+ 10.26%    3.043      1 Template:GuiCommand/fr
+  9.19%    2.727      1 Template:Version/fr
+  4.88%    1.449      6 Template:Button
+  4.44%    1.316      2 Template:Caption
+  3.94%    1.170      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260119185250 and revision id 1741102. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260119185639 and revision id 1741105. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
