--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -13,13 +13,13 @@ Macro Cut Object for Magnets
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Sean P. Kane<br>
+<td class="ctEven left macro-description">Cut an object along a plane and add aligned magnet holes with surface collision detection. Creates two parts with perfectly aligned holes for embedding magnets that allow the parts to snap together.<br><br>Macro version: 0.6.2<br>Last modified: 2026-01-18<br>FreeCAD version: 0.19+<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/thumb/e/e3/Macro_Cut_Object_For_Magnets.png/48px-Macro_Cut_Object_For_Magnets.png">ToolBar Icon</a><br>Author: Spkane<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Sean_P._Kane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Sean P. Kane (page does not exist)">Sean P. Kane</a>
+<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -103,7 +103,7 @@ Macro Cut Object for Magnets
 <li><b>Edge Clearance (Preferred)</b>: Ideal distance from hole edge to object surface</li>
 <li><b>Edge Clearance (Minimum)</b>: Minimum acceptable clearance</li></ul></li></ul></li>
 <li>Click "Execute Cut"</li></ol>
-<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260106015545&amp;.html" class="mw-file-description"><img src="File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="442" class="mw-file-element" data-file-width="994" data-file-height="1098"></a><figcaption></figcaption></figure>
+<figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=MacroCutObjectForMagnetsDialog.png&amp;filetimestamp=20260119180444&amp;.html" class="mw-file-description"><img src="File/MacroCutObjectForMagnetsDialog.png" decoding="async" width="400" height="427" class="mw-file-element" data-file-width="1022" data-file-height="1092"></a><figcaption></figcaption></figure>
 <p><br>
 </p>
 <h2><span class="mw-headline" id="Example">Example</span></h2>
@@ -209,15 +209,15 @@ Macro Cut Object for Magnets
 <li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119175206
+Cached time: 20260119190012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.256 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 158/1000000
-Post&#8208;expand include size: 2663/2097152 bytes
-Template argument size: 941/2097152 bytes
+Post&#8208;expand include size: 2639/2097152 bytes
+Template argument size: 917/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -225,12 +225,12 @@ Unstrip post&#8208;expand size: 909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.875      1 -total
- 63.55%    1.827      1 Template:Macro
- 29.36%    0.844      3 Template:FileName
+100.00%    9.245      1 -total
+ 81.72%    7.555      1 Template:Macro
+ 15.27%    1.412      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119175210 and revision id 1741028. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119190018 and revision id 1741106. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
