--- a/wiki/User;Spkane.html
+++ b/wiki/User;Spkane.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">User:Spkane</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><meta property="mw:PageProp/toc">
-<h2><span id="Sean_P._Kane_.28_Spkane_.29"></span><span class="mw-headline" id="Sean_P._Kane_(_Spkane_)">Sean P. Kane (_Spkane_)</span></h2>
+<h2><span id="Sean_P._Kane_.28Spkane.29"></span><span class="mw-headline" id="Sean_P._Kane_(Spkane)">Sean P. Kane (<i>Spkane</i>)</span></h2>
 <h3><span class="mw-headline" id="FreeCAD_Contributions">FreeCAD Contributions</span></h3>
 <h4><span class="mw-headline" id="Workbench">Workbench</span></h4>
 <ul><li><a href="Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench">Robust MCP Bridge Workbench</a> - A robust MCP (Model Context Protocol) bridge workbench for AI assistant integration with FreeCAD</li></ul>
@@ -11,12 +11,12 @@
 <li><a rel="nofollow" class="external text" href="https://www.printables.com/@spkane">Printables Profile</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119182130
+Cached time: 20260119190040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.005 seconds
-Real time usage: 0.014 seconds
+CPU time usage: 0.006 seconds
+Real time usage: 0.006 seconds
 Preprocessor visited node count: 17/1000000
 Post&#8208;expand include size: 0/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -30,7 +30,7 @@ Transclusion expansion time report (%,ms,calls,template)
 100.00%    0.000      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411899-0!canonical and timestamp 20260119182130 and revision id 1741036. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411899-0!canonical and timestamp 20260119190041 and revision id 1741107. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
