--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -163,12 +163,12 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119185020
+Cached time: 20260119190128
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.100 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 251/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
@@ -179,16 +179,16 @@ Unstrip post&#8208;expand size: 3298/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.878      1 -total
- 27.26%    3.783      4 Template:Code
- 19.10%    2.650      3 Template:FileName
- 16.38%    2.274      4 Template:MenuCommand
- 12.27%    1.703      5 Template:Incode
-  9.90%    1.374      1 Template:TOCright
-  5.95%    0.826      3 Template:Button
+100.00%    9.093      1 -total
+ 23.56%    2.142      4 Template:Code
+ 16.36%    1.488      1 Template:TOCright
+ 13.02%    1.184      5 Template:Incode
+ 12.23%    1.112      3 Template:FileName
+ 11.90%    1.082      4 Template:MenuCommand
+ 10.72%    0.975      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119185028 and revision id 1741094. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260119190128 and revision id 1741094. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
