--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -19,7 +19,7 @@ Macro Multi Export
 <th class="ctOdd">Author
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a href="index.php?title=User;Spkane&amp;action=edit&amp;redlink=1.html" class="new" title="User:Spkane (page does not exist)">Spkane</a>
+<td class="ctEven macro-author"><a href="User;Spkane.html" title="User:Spkane">Spkane</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
@@ -129,12 +129,12 @@ Macro Multi Export
 <li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119182033
+Cached time: 20260119191600
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.211 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.073 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 2508/2097152 bytes
 Template argument size: 806/2097152 bytes
@@ -145,12 +145,12 @@ Unstrip post&#8208;expand size: 852/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.342      1 -total
- 62.19%    5.188      1 Template:Macro
- 33.38%    2.785      3 Template:FileName
+100.00%    5.298      1 -total
+ 69.36%    3.675      1 Template:Macro
+ 24.27%    1.286      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119182047 and revision id 1741035. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260119191600 and revision id 1741035. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
